# zip

./: .clang-format  .clang-tidy  .cmake-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements-dev.txt  zipit.h
.github/workflows/: build-and-test.yaml
benchmark/: bench-iterator.cpp
benchmark/optimization/: Point1dZipSum.cpp  Point2dSoaZipSum.cpp  Point3dSoaZipSum.cpp  Point3dSoaZipSum.opt.yaml  Point3dSoaZipSum.s  Point4dSoaZipSum.cpp
cmake/: FindClangFormat.cmake  FindClangTidy.cmake  FnAddCxxStdLibrary.cmake  FnAddOptReport.cmake  FnAddOptimizationRecord.cmake  FnGetTargetIncludeDirectories.cmake  FnGitSubmoduleUpdate.cmake  OptimizationRecord.cmake
cmake/cache/: native-clang-libc++.cmake  native.cmake  sanitize-clang-libc++.cmake  sanitize.cmake
cmake/modules/: FindClangFormat.cmake  FindClangTidy.cmake  FindFileCheck.cmake  FnGetSanitizerFlags.cmake  FnGetTargetSources.cmake
cmake/presets/: clang-native-libc++.cmake  native.cmake  sanitize.cmake
contrib/llvm/include/llvm/ADT/: STLExtras.h
include/: unsafe.h  zip.h  zip_view.h
scripts/: opt-report-summary.py
test/: main.cpp  sanitizer-options.cpp  test-helpers.h  test-iterator.cpp  test-zip.cpp  test-zipit.cpp
test/opt/: Point1dIteratorSum.cpp  Point1dZipSum.cpp  Point2dSoaZipSum.cpp  Point3dSoaZipSum.cpp  Point4dSoaZipSum.cpp  SumReduce1d.cpp  SumReduce2d.cpp  SumReduce3d.cpp  SumReduce4d.cpp  lit.cfg.py  lit.site.cfg.py.in
test/unit/: sanitize-options.cpp  test-iterator.cpp
